swagger re-doccument, added consumer for the order service incoming message, used lazy loading or read through caching when its come to added product to the cart one is check if there are items in the cache and if not then fetching through the URL(hopefully not)
